# os

./: .gitignore  .justfile  Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  x.py  x86_64-os.json
.cargo/: config.toml
lib/bitmap/src/: bitmap.rs  lib.rs
lib/multiboot2/: Cargo.toml
lib/multiboot2/src/: lib.rs
lib/multiboot2/src/fields/: apm.rs  basic_memory_info.rs  bios_boot_device.rs  boot_command_line.rs  boot_loader_name.rs  efi.rs  elf_symbols.rs  framebuffer_info.rs  image_load_base.rs  memory_map.rs  mod.rs  modules.rs  networking.rs  rsdp.rs  smbios.rs  vbe_info.rs
lib/multiboot2/src/header/: mod.rs
lib/port/: Cargo.toml
lib/port/src/: lib.rs  port.rs
lib/serial/: Cargo.toml
lib/serial/src/: lib.rs  uart.rs
lib/x86_64/: Cargo.toml
lib/x86_64/src/: consts.rs  lib.rs
lib/x86_64/src/address/: mod.rs  phys.rs  virt.rs
lib/x86_64/src/paging/: allocator.rs  mod.rs  phys_frame.rs  tlb.rs
lib/x86_64/src/tables/: acpi.rs  madt.rs  mod.rs  multiproc.rs  rsdp.rs
src/: allocator.rs  common.rs  consts.rs  lib.rs  main.rs  multiboot.rs  paging.rs  port.rs  sections.rs  uart.rs  vga.rs
src/address/: mod.rs  phys.rs  sections.rs  virt.rs
src/arch/tmp/: boot_2.s  boot_3.s
src/arch/x86_64/: boot.asm  boot_1.s  boot_2.s  boot_3.s  boot_32.s  boot_64.s  isr.s  linker.ld  long_mode_init.asm  mp_boot.s  multiboot_header.asm  registers.rs  tlb.rs  trampoline.s
src/disk/: bcache.rs  buf.rs  disk.rs  ext.rs  fat.rs  ide.rs  mod.rs
src/fs/: ext.rs  fat.rs  mod.rs
src/interrupts/: errors.rs  gdt.rs  handlers.rs  idt.rs  mod.rs  rflags.rs  tss.rs
src/io/: cmos.rs  colors.rs  ioapic.rs  keyboard.rs  lapic.rs  mod.rs  pic.rs  pit.rs  port.rs  uart.rs  vga.rs
src/memory/: heap.rs  mod.rs
src/paging/: allocator.rs  mod.rs  page.rs  page_table.rs  phys_frame.rs
src/proc/: cpu.rs  mod.rs  process.rs  tasks.rs
src/registers/: control.rs
src/tables/: acpi.rs  madt.rs  mod.rs  multiboot2.rs  multiproc.rs  rsdp.rs
src/task/: executor.rs  mod.rs
tests/: stack_overflow.rs  template.rs
