[package]
authors = ["budde25 <ethan@ebudd.io>"]
edition = "2021"
name = "os"
version = "0.1.0"

[dependencies]
bit_field = "0.10.1"
bitflags = "1.3.1"
spin = "0.9.2"
arrayvec = { default-features = false, version = "0.7.1"}
lazy_static = { features = ["spin_no_std"], version = "1.4.0"}
volatile = "0.4.4"
derive_more = "0.99"
# local libs
port = { path = "lib/port" }
block-alloc = { git = "ssh://git@github.com/budde25/alloc.git" }

[profile.dev]
lto = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[[test]]
harness = false
name = "stack_overflow"
