[package]
authors = [ "budde25 <ethan@ebudd.io>" ]
edition = "2021"
name = "os"
version = "0.1.0"

[dependencies]
bit_field = "0.10.1"
bitflags = "1.3.2"
spin = "0.9.4"
staticvec = { default-features = false, version = "0.11.7" }
volatile = "0.4.5"
derive_more = "0.99.17"
conquer-once = { default-features = false, version = "0.3.2" }
crossbeam-queue = { default-features = false, features = [ "alloc" ], version = "0.3.6" }
futures-util = { default-features = false, features = [ "alloc" ], version = "0.3.23" }
custom_debug_derive = "0.5.0"

# local libs
port = { path = "lib/port" }
bitmap = { path = "lib/bitmap" }
block-alloc = { git = "ssh://git@github.com/budde25/alloc.git" }

[profile.dev]
lto = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[[test]]
harness = false
name = "stack_overflow"
